@@ -28,7 +28,7 @@
 		}
 		elseif($groupid > 0)
 		{
-			$sql="select distinct a.clock,a.value,a.triggerid from alarms a,functions f,items i where a.triggerid=f.triggerid and f.itemid=i.itemid and i.hostid=hg.hostid and hg.groupid=".$groupid." order by clock desc";
+			$sql="select distinct a.clock,a.value,a.triggerid from alarms a,functions f,items i,hosts_groups hg where a.triggerid=f.triggerid and f.itemid=i.itemid and i.hostid=hg.hostid and hg.groupid=".$groupid." order by clock desc";
 		}
 		else
 		{
