@@ -1,5 +1,6 @@
 Changes for 1.1.3:
 
+ - fixed Most Busy trigger report for multi-item triggers (Alexei)
  - fixed possible security issues raised by debian security audit (Alexei)
  - changed all zabbix_log(lev, str) to zabbix_log(lev,"%s", str) (Alexei)
  - introduced secure strcat and strcpy: zbx_strlcat, zbx_strlcpy (Alexei)
